# SpotifyVFS

./: CMakeLists.txt  README.md
include/: spotify_api.h  spotify_fs.h
src/: main.cpp  spotify_api.cpp  spotify_fs.cpp
